# s3-overlay

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
s3_overlay/: __init__.py  app.py  proxy.py
tests/: conftest.py  test_chunking.py  test_integration.py  test_proxy.py
