[project]
name = "s3-overlay"
version = "1.0.4"
description = "S3 overlay proxy for transparent remote object caching"
license = "MIT"
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
  "anyio>=4.0.0",
  "boto3>=1.37.0",
  "httpx>=0.27.2",
  "litestar[standard,prometheus]>=2.10.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
]

[project.optional-dependencies]
build = ["uv ~= 0.10.0"]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "pytest-databases>=0.16.0",
  "ruff>=0.15.0",
  "ty>=0.0.15",
]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "s3_overlay"
module-root = ""

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = """
    python -m pip install -e '.[build]'
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""
